--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,4 @@
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -22,6 +23,14 @@
 
 body {
   margin: 0;
+  font-family: Arial, sans-serif;
+  transition: background-color 0.3s, color 0.3s;
+  background-color: var(--primary-bg-color);
+  color: var(--primary-text-color);
+}
+
+.light, .dark {
+  min-height: 100vh;
 }
 
 /**
